<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>com.kyj.fx.b</groupId>
	<artifactId>ETFxHelper</artifactId>
	<name>ETFxHelper</name>

	<packaging>jar</packaging>
	<version>0.0.1-SNAPSHOT</version>

	<organization>
		<!-- Used as the 'Vendor' for JNLP generation -->
		<name>KYJ</name>
	</organization>

	<properties>
		<mainclassname>com.kyj.fx.b.ETScriptHelper.MainApp</mainclassname>
		<logback.version>1.2.0</logback.version>
		<!-- <slf4j.version>2.0.0-alpha7</slf4j.version> -->
		<slf4j.version>1.7.20</slf4j.version>
		<java.version>16</java.version>

		<spring-framework.version>5.3.19</spring-framework.version>
		<!--
		<spring-framework.version>4.3.19.RELEASE</spring-framework.version>
		-->
		<poi.word.version>5.2.2</poi.word.version>
		<!-- HTTP -->
		<apache-http-client.version>4.5.13</apache-http-client.version>
		<project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>
	</properties>

	<build>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<includes>
					<include>**</include>
				</includes>

			</resource>
		</resources>
		<sourceDirectory>src/main/java</sourceDirectory>
		<testSourceDirectory>src/test/java</testSourceDirectory>

		<finalName>ETFxHelper</finalName>
		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<argLine>--illegal-access=permit</argLine>
				</configuration>
			</plugin>


			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>UTF-8</encoding>
					<showWarnings>false</showWarnings>
					<showDeprecation>false</showDeprecation>
				</configuration>
			</plugin>


			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<artifactSet>
								<excludes>
									<exclude>org.openjfx:*</exclude>
								</excludes>
							</artifactSet>
							<createDependencyReducedPom>true</createDependencyReducedPom>
							<outputFile>target/lib/ETHelper-${project.version}-all.jar</outputFile>

							<!--
							<filters>
						        <filter>
						            <artifact>*:*</artifact>
						            <excludes>
						                <exclude>META-INF/*.SF</exclude>
						                <exclude>META-INF/*.DSA</exclude>
						                <exclude>META-INF/*.RSA</exclude>
						            </excludes>
						        </filter>
						    </filters>
						    -->

							<transformers>
								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>${mainclassname}</mainClass>
								</transformer>
							</transformers>

						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.8</version>
				<executions>
					<execution>
						<!-- Default configuration for running -->
						<!-- Usage: mvn clean javafx:run -->
						<id>default-cli</id>
						<configuration>
							<mainClass>${mainclassname}</mainClass>
						</configuration>
					</execution>
				</executions>

				<configuration>

					<stripDebug>true</stripDebug>
					<compress>2</compress>
					<noHeaderFiles>true</noHeaderFiles>
					<noManPages>true</noManPages>
					<launcher>ETHelper</launcher>
					<jlinkZipName>ETHelperZIP</jlinkZipName>
					<mainClass>${mainclassname}</mainClass>
					<!-- <jlinkExecutable>ETHelper</jlinkExecutable> -->
				</configuration>
			</plugin>


			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<outputDirectory>${project.build.directory}/dist/lib</outputDirectory>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>${mainclassname}</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>


		</plugins>

	</build>


	<dependencies>


		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>

		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.7</version>
		</dependency>

		<dependency>
			<groupId>com.microsoft.sqlserver</groupId>
			<artifactId>mssql-jdbc</artifactId>
			<version>7.0.0.jre8</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
		<!-- <dependency> -->
		<!-- <groupId>com.microsoft.sqlserver</groupId> -->
		<!-- <artifactId>mssql-jdbc</artifactId> -->
		<!-- <version>10.2.0.jre17</version> -->
		<!-- </dependency> -->


		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jdbc</artifactId>
			<version>${spring-framework.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${spring-framework.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-beans</artifactId>
			<version>${spring-framework.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-tx</artifactId>
			<version>${spring-framework.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring-framework.version}</version>
		</dependency>


		<!-- no more update -->
		<!-- <dependency> -->
		<!-- <groupId>org.apache.velocity</groupId> -->
		<!-- <artifactId>velocity</artifactId> -->
		<!-- <version>1.7</version> -->
		<!-- </dependency> -->

		<!-- https://mvnrepository.com/artifact/org.apache.velocity/velocity-engine-core -->
		<dependency>
			<groupId>org.apache.velocity</groupId>
			<artifactId>velocity-engine-core</artifactId>
			<version>2.3</version>
		</dependency>


		<!-- Tomcat -->
		<!-- <dependency> -->
		<!-- <groupId>org.apache.tomcat</groupId> -->
		<!-- <artifactId>tomcat-jdbc</artifactId> -->
		<!-- <version>8.0.9</version> -->
		<!-- </dependency> -->

		<!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-jdbc -->
		<dependency>
			<groupId>org.apache.tomcat</groupId>
			<artifactId>tomcat-jdbc</artifactId>
			<version>9.0.62</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.12</version>
		</dependency>

		<!-- ControlsFx i found SpreadSheet bug .. 8.40.10 version -->
		<!-- <dependency> -->
		<!-- <groupId>org.controlsfx</groupId> -->
		<!-- <artifactId>controlsfx</artifactId> -->
		<!-- <version>8.40.14</version> -->
		<!-- </dependency> -->

		<!-- https://mvnrepository.com/artifact/org.controlsfx/controlsfx -->
		<dependency>
			<groupId>org.controlsfx</groupId>
			<artifactId>controlsfx</artifactId>
			<version>11.1.0</version>
		</dependency>


		<!-- <dependency> -->
		<!-- <groupId>com.kyj.fx</groupId> -->
		<!-- <artifactId>gargoyle-nashorn</artifactId> -->
		<!-- <version>0.0.1</version> -->
		<!-- </dependency> -->

		<!-- <dependency> -->
		<!-- <groupId>org.fxmisc.richtext</groupId> -->
		<!-- <artifactId>richtextfx</artifactId> -->
		<!-- <version>0.10.4</version> -->
		<!-- </dependency> -->
		<!-- https://mvnrepository.com/artifact/org.fxmisc.richtext/richtextfx -->
		<dependency>
			<groupId>org.fxmisc.richtext</groupId>
			<artifactId>richtextfx</artifactId>
			<version>0.10.9</version>
		</dependency>


		<dependency>
			<groupId>org.fxmisc.cssfx</groupId>
			<artifactId>cssfx</artifactId>
			<version>1.0.0</version>
		</dependency>

		<!-- <dependency> -->
		<!-- <groupId>org.apache.poi</groupId> -->
		<!-- <artifactId>poi-ooxml</artifactId> -->
		<!-- <version>${poi.word.version}</version> -->
		<!-- </dependency> -->
		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>5.2.2</version>
		</dependency>


		<!-- <dependency> -->
		<!-- <groupId>com.kyj.syncade.et</groupId> -->
		<!-- <artifactId>SyncadeETHelper</artifactId> -->
		<!-- <version>0.0.1-SNAPSHOT</version> -->
		<!-- </dependency> -->

		<!-- Http -->
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>${apache-http-client.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpmime</artifactId>
			<version>${apache-http-client.version}</version>
		</dependency>

		<!-- <dependency> -->
		<!-- <groupId>dom4j</groupId> -->
		<!-- <artifactId>dom4j</artifactId> -->
		<!-- <version>1.6.1</version> -->
		<!-- </dependency> -->
		<!-- https://mvnrepository.com/artifact/org.dom4j/dom4j -->
		<dependency>
			<groupId>org.dom4j</groupId>
			<artifactId>dom4j</artifactId>
			<version>2.1.3</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/xml-apis/xml-apis -->
		<dependency>
			<groupId>xml-apis</groupId>
			<artifactId>xml-apis</artifactId>
			<version>1.0.b2</version>
		</dependency>

		<dependency>
			<groupId>jaxen</groupId>
			<artifactId>jaxen</artifactId>
			<version>1.1.6</version>
		</dependency>

		<!---->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>16</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics</artifactId>
			<version>16</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-base</artifactId>
			<version>16</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>16</version>
		</dependency>

		<!-- <dependency> -->
		<!-- <groupId>org.openjfx</groupId> -->
		<!-- <artifactId>javafx</artifactId> -->
		<!-- <version>17</version> -->
		<!-- <type>pom</type> -->
		<!-- </dependency> -->

		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.9</version>
		</dependency>


		<!-- <dependencies> -->
		<!-- <dependency> -->
		<!-- <groupId>org.openjfx</groupId> -->
		<!-- <artifactId>javafx-controls</artifactId> -->
		<!-- <version>17</version> -->
		<!-- </dependency> -->
		<!-- </dependencies> -->


		<dependency>
			<groupId>jakarta.xml.bind</groupId>
			<artifactId>jakarta.xml.bind-api</artifactId>
			<version>2.3.3</version>
		</dependency>
		
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-impl</artifactId>
			<version>2.3.3</version>
			<scope>runtime</scope>
		</dependency>

	</dependencies>

	<repositories>
		<!-- <repository> -->
		<!-- <id>My-Project</id> -->
		<!-- <name>My-Project Custom Jars</name> -->
		<!-- <url>file://${project.basedir}/lib/</url> -->
		<!-- </repository> -->


		<repository>
			<id>Maven Central</id>
			<name>Maven Central</name>
			<url>https://repo1.maven.org/maven2/</url>
		</repository>
	</repositories>

</project>